--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@
   <title>Cristian's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/cristianramirezrodriguez/resume/blob/ae9300faf780a62b2a49bca32d95df06946fff76/ramirez_rodriguez_cristian_one_page_resume_march_2024.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/cristianramirezrodriguez/resume/ae9300faf780a62b2a49bca32d95df06946fff76/ramirez_rodriguez_cristian_one_page_resume_march_2024.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
 </html>
